fix(_partContainer.scss): last video disable on mobile

--- a/src/scss/sections/_partContainer.scss
+++ b/src/scss/sections/_partContainer.scss
@@ -235,6 +235,10 @@ section.partContainer  video.background {
         display: none;
     }
 
+    #compteur {
+      display: none;
+    }
+
     section.partContainer .partContainer-content{
         width: 100vw;
         left: 0;
